@@ -10,8 +10,6 @@ $EM_CONF[$_EXTKEY] = [
     'category' => 'misc',
     'version' => '0.9.3',
     'state' => 'stable',
-    'uploadfolder' => '',
-    'createDirs' => '',
     'clearcacheonload' => 1,
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
